<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.devmasterteam.tasks.com.meutreino.tasks.views.TaskFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textSize="18dp"
                    android:text="Circuito :" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#ececec" />


            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/atividade"
                android:lines="2" />

            <EditText
                android:id="@+id/edit_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_tempo"
                android:lines="2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ececec" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#ececec" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/clique_para_selecionar_a_data" />

            <Button
                android:id="@+id/button_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:gravity="center_vertical" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:background="#ececec" />

            <!-- <Button
                 android:id="@+id/button_set_alarm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"

                 android:gravity="center_vertical"
                 android:text="Setar Alarm" />

             <Button
                 android:id="@+id/button_cancel"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Cancelar Alarm" />
                 -->
            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_tarefa" />


            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/alarmprompt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
